# dotfiles

./: .gitignore  .gitmodules  BOOT_ISSUES.md  CLAUDE.md  Makefile  bootstrap.sh  pkglist-aur.txt  pkglist-ubuntu.txt  pkglist.txt
NetworkManager/dispatcher.d/: 50-restart-sshfs
bash/: .bashrc
bash/.config/: starship.toml
claude/: .stow-local-ignore
claude/.claude/: CLAUDE.md  settings.json
claude/.claude/hooks/: notify.sh  statusline.js
fish/.config/fish/: config.fish
git/: .gitconfig
grub/: grub
hypr-tray/: Cargo.toml  Makefile  config.toml.example  hypr-tray.service
hypr-tray/src/: config.rs  daemon.rs  hyprland.rs  main.rs
hypr/.config/hypr/: colors.conf  hypridle.conf  hyprkool.toml  hyprland.conf  hyprlock.conf  hyprscratch.conf  monitors.conf  workspaces.conf
hypr/.config/hypr-monitor/: config.toml
hypr/.config/hypr-wallpaper/: config  rules.toml
hypr/.config/hyprwhenthen/: config.toml
kitty/.config/kitty/: colors.conf  kitty.conf
mako/.config/mako/: config
mime/.config/: mimeapps.list
mkinitcpio/: mkinitcpio.conf
modprobe/: intel-sof-hp-leds.conf  nvidia.conf
nvim/.config/nvim/: init.lua  lazy-lock.json
restic/.config/restic/: excludes
rofi/.config/rofi/: colors.rasi  config.rasi
spotify-player/.config/spotify-player/: app.toml  theme.toml
ssh/.ssh/: config
sysctl/: 99-sysrq.conf
systemd/: sleep.conf
systemd/logind.conf.d/: 10-lid.conf
systemd/system-sleep/: fuse-mounts  hyprlock-restart
systemd/system/systemd-hibernate.service.d/: 20-restore-freeze-session.conf
tmux/: .tmux.conf
visidata/: .visidatarc
(+45 files in other folders)
