[package]
name = "hypr-tray"
version = "0.1.0"
edition = "2024"
description = "Hold GUI processes in the system tray for Hyprland"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
shlex = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
